--- a/locales/ru.json
+++ b/locales/ru.json
@@ -7,6 +7,7 @@
 
     "Hero-title":"DevoSoft - для тех кто ценит время",
     "Hero-btn":"Связатся",
+    "Hero-brn-mobile": "Позвонить",
 
     "section3-title":"Наши сильные стороны",
     "section3-card1-title":"Качественные услуги",
@@ -15,6 +16,8 @@
     "section3-card4-title":"Качественные услуги",
 
     "section4-title":"О нас",
+    "section4-info1":"Качественные услуги",
+    "section4-info2":"Необычные проекты",
     "section4-btn":"Узнать больше",
 
     "section5-title":"Все наши услуги",
