--- a/locales/uz.json
+++ b/locales/uz.json
@@ -57,7 +57,7 @@
     "page2-hero-btn":"Bog’lanish",
 
 
-    "page3-hero-title":"Biznesni avtomaylashtirish",
+    "page3-hero-title":"Biznesni avtomatlashtirish",
     "page3-hero-btn":"Bog’lanish",
 
     "page3-hero-card1-title":"CRM sistema",
